--- a/teaching/index.html
+++ b/teaching/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: Course repository * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices. + Fall 16-17 Spring 15-16 Fall 15-16 Spring 14-15 * Statistical inference. + Fall...">
+  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: Course repository * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course (1st chapter , 2nd chapter ), Exercices (1st part ). + Fall 16-17 Spring 15-16...">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: Course repository * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices. + Fall 16-17 Spring 15-16 Fall 15-16 Spring 14-15 * Statistical inference. + Fall...">
+  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: Course repository * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course (1st chapter , 2nd chapter ), Exercices (1st part ). + Fall 16-17 Spring 15-16...">
   
 
   
@@ -239,7 +239,7 @@
 <ul>
   <li>Probabilities &amp; Statistics.
     <ul>
-      <li>Prepared by me for Spring 16-17: Course,  Exercices.</li>
+      <li>Prepared by me for Spring 16-17: Course (1st chapter <a target="_blank" href="../documents/proba-spring-16-17-1.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>, 2nd chapter <a target="_blank" href="../documents/proba-spring-16-17-2.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>),  Exercices (1st part <a target="_blank" href="../documents/proba-spring-16-17-td1.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>).</li>
       <li>
         <ul class="list-inline">
     <li> Fall 16-17 <a target="_blank" href="../documents/proba-fall-16-17.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></li>
