--- a/MLcourse/pw-3.html
+++ b/MLcourse/pw-3.html
@@ -196,7 +196,22 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <h1>PW 3</h1>
 <div id="report-template" class="section level2 unnumbered">
 <h2>Report template</h2>
-<p>For this week, download the following template by clicking on this <a href="files/LastName_FirstName_Week3.Rmd">link</a> (right cligk and save link as). Save the template in your folder that you are going to use as working directory. Rename the file (replace LastName by your last name and FirstName by your first name). Open it in <code>Rstudio</code> and use it for your report to be submitted.</p>
+<!-- For this week, download the following template by clicking on this [link](files/LastName_FirstName_Week3.Rmd) (right cligk and save link as). Save the template in your folder that you are going to use as working directory. Rename the file (replace LastName by your last name and FirstName by your first name). Open it in `Rstudio` and use it for your report to be submitted. -->
+<p>Create a new RMarkdown file and replace the YAML header with these lines:</p>
+<pre><code>---
+title: &quot;Week 3&quot;
+subtitle: &quot;Logistic Regression&quot;
+author: LastName FirstName
+date: &quot;23/01/2017&quot;
+output:
+  html_document:
+    toc: true
+    toc_depth: 2
+    toc_float: true
+    theme: united
+    highlight: zenburn
+---</code></pre>
+<p>Name the file <code>LastName_FirstName_Week3</code> and submit the html output.</p>
 </div>
 <div id="social-networks-ads" class="section level2 unnumbered">
 <h2>Social Networks Ads</h2>
