--- a/MLcourse/logistic-regression.html
+++ b/MLcourse/logistic-regression.html
@@ -26,7 +26,7 @@
 <meta name="author" content="Mohamad Ghassany">
 
 
-<meta name="date" content="2017-02-02">
+<meta name="date" content="2017-02-05">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -203,6 +203,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="5.5" data-path="support-vector-machines.html"><a href="support-vector-machines.html#lab-support-vector-machine-for-classification"><i class="fa fa-check"></i><b>5.5</b> Lab: Support Vector Machine for Classification</a></li>
 <li class="chapter" data-level="5.6" data-path="support-vector-machines.html"><a href="support-vector-machines.html#lab-nonlinear-support-vector-machine"><i class="fa fa-check"></i><b>5.6</b> Lab: Nonlinear Support Vector Machine</a></li>
 </ul></li>
+<li class="chapter" data-level="" data-path="pw-5.html"><a href="pw-5.html"><i class="fa fa-check"></i>PW 5</a></li>
 </ul>
 
       </nav>
@@ -322,27 +323,27 @@ Click <a href="https://egarpor.shinyapps.io/log-maximum-likelihood/" target="_bl
 <table>
 <thead>
 <tr class="header">
-<th></th>
-<th>Coefficient</th>
-<th>Std. error</th>
-<th><span class="math inline">\(Z\)</span>-statistic</th>
-<th>p-value</th>
+<th align="left"></th>
+<th align="left">Coefficient</th>
+<th align="left">Std. error</th>
+<th align="left"><span class="math inline">\(Z\)</span>-statistic</th>
+<th align="left">p-value</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td>Constant</td>
-<td>-10.6513</td>
-<td>0.3612</td>
-<td>-29.5</td>
-<td>&lt;0.0001</td>
+<td align="left">Constant</td>
+<td align="left">-10.6513</td>
+<td align="left">0.3612</td>
+<td align="left">-29.5</td>
+<td align="left">&lt;0.0001</td>
 </tr>
 <tr class="even">
-<td><span class="math inline">\(X\)</span></td>
-<td>0.0055</td>
-<td>0.0002</td>
-<td>24.9</td>
-<td>&lt;0.0001</td>
+<td align="left"><span class="math inline">\(X\)</span></td>
+<td align="left">0.0055</td>
+<td align="left">0.0002</td>
+<td align="left">24.9</td>
+<td align="left">&lt;0.0001</td>
 </tr>
 </tbody>
 </table>
